--- a/index.html
+++ b/index.html
@@ -15,5 +15,38 @@
 
 <body>
  
+<nav>
+
+    <ul>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+
+</nav>
+
+    <main>
+
+    <article>
+        <h2>HTML</h2>
+        <p>HTML is the unifying language of the World Wide Web. Using just the simple tags it contains, the human race has created an astoundingly diverse network of hyperlinked couments from Amazon, eBay, and Wikipedia, to persona blogs and websites dedicated to cats that look like Hitler.</p>
+        <cite>&mdash; Jeremy Keith</cite>
+    </article>
+
+    <article>
+            <h2>HTML</h2>
+            <p>HTML is the unifying language of the World Wide Web. Using just the simple tags it contains, the human race has created an astoundingly diverse network of hyperlinked couments from Amazon, eBay, and Wikipedia, to persona blogs and websites dedicated to cats that look like Hitler.</p>
+            <cite>&mdash; Jeremy Keith</cite>
+        </article>
+
+        <article>
+                <h2>HTML</h2>
+                <p>HTML is the unifying language of the World Wide Web. Using just the simple tags it contains, the human race has created an astoundingly diverse network of hyperlinked couments from Amazon, eBay, and Wikipedia, to persona blogs and websites dedicated to cats that look like Hitler.</p>
+                <cite>&mdash; Jeremy Keith</cite>
+            </article>
+
+        </main>     
+
 </body>
 </html>
