--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     <article>
             <img src="images/logo-css.png">
             <h2>CSS</h2>
-            <p>HTML is the unifying language of the World Wide Web. Using just the simple tags it contains, the human race has created an astoundingly diverse network of hyperlinked couments from Amazon, eBay, and Wikipedia, to persona blogs and websites dedicated to cats that look like Hitler.</p>
-            <cite>&mdash; Jeremy Keith</cite>
+            <p>CSS isn’t easy. Combining a very permissive (somewhat broken) syntax with constantly evolving features and rendering inconsistencies makes CSS not that easy at all. Yes, the syntax is simple, but a simple syntax doesn’t make an easy language.</p>
+            <cite>&mdash; Hugo Giraudel</cite>
         </article>
 
         <article>
                 <img src="images/logo-js.png">
                 <h2>Javascript</h2>
-                <p>HTML is the unifying language of the World Wide Web. Using just the simple tags it contains, the human race has created an astoundingly diverse network of hyperlinked couments from Amazon, eBay, and Wikipedia, to persona blogs and websites dedicated to cats that look like Hitler.</p>
+                <p>I am not content, nor should you be, at stopping once something just works, and not really knowing why. I gently challenge you to journey down that bumpy "road less traveled" and embrace all that JavaScript is and can do. With that knowledge, no technique, no framework, no popular buzzword acronym of the week, will be beyond your understanding.</p>
                 <cite>&mdash; Jeremy Keith</cite>
             </article>
 
