--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 <body>
  
+<header>  
 <nav>
+
+    <img src="images/logo-main.png">
 
     <ul>
         <li><a href="#">Products</a></li>
@@ -25,6 +28,7 @@
     </ul>
 
 </nav>
+</header>  
 
     <main>
 
