added viewport meta tag to html and flexible images command to css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="Layout Practice Using Flexbox">
   <meta name="author" content="Grant Corley">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
   
