--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 
     <main>
 
+     <div id="hero">
+
+        <h1>Hello World!</h1>
+
+     </div> <!-- end hero -->
+
     <article class="html">
         <img src="images/logo-html.png">
         <h2>HTML</h2>
