--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
      </div> <!-- end hero -->
 
+     <div id="articles">
+
     <article class="html">
         <img src="images/logo-html.png" alt="html logo">
         <h2>HTML</h2>
@@ -63,6 +65,8 @@
                 <p>I am not content, nor should you be, at stopping once something just works, and not really knowing why. I gently challenge you to journey down that bumpy "road less traveled" and embrace all that JavaScript is and can do. With that knowledge, no technique, no framework, no popular buzzword acronym of the week, will be beyond your understanding.</p>
                 <cite>&mdash; Jeremy Keith</cite>
             </article>
+
+        </div>    
 
         </main>     
 
