attempted to fix margins issue related to nav on mobile devices

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 
 <body>
  
-<header> 
-    
-         <a href="#"><img src="images/logo-main.png" alt="'W' logo"></a>
 
+<header>     
+         <a href="#"><img class="main-logo" src="images/logo-main.png" alt="'W' logo"></a>
 <nav>
 
     <ul>
@@ -32,8 +31,9 @@
 
 </nav>
 
-
 </header>  
+
+
 
     <main>
 
